--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="header center">
+<header class="header center">
     <div class="header__left">
         <img src="img/logo.svg" alt="logo">
         <svg width="27" height="28" viewBox="0 0 27 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -73,8 +73,8 @@
                   fill="#E8E8E8"/>
         </svg>
     </div>
-</div>
-<div class="top">
+</header>
+<section class="top">
     <div class="top__left">
         <img src="img/top-img.png" alt="img">
     </div>
@@ -85,25 +85,25 @@
                 <span class="spanned__text">FASHION</span></h2>
         </div>
     </div>
-</div>
-<div class="sale center">
+</section>
+<section class="sale center">
     <div class="sale__content">
         <div class="sale__item">
-            <img src="img/sale1.jpg" alt="sale img">
+            <img class="sale__img" src="img/sale1.jpg" alt="sale img">
             <div class="sale__text">
                 <p class="sale__p">30% OFF</p>
                 <h3 class="sale__heading">FOR WOMEN</h3>
             </div>
         </div>
         <div class="sale__item">
-            <img src="img/sale2.jpg" alt="sale img">
+            <img class="sale__img" src="img/sale2.jpg" alt="sale img">
             <div class="sale__text">
                 <p class="sale__p">HOT DEAL</p>
                 <h3 class="sale__heading">FOR MEN</h3>
             </div>
         </div>
         <div class="sale__item">
-            <img src="img/sale3.jpg" alt="sale img">
+            <img class="sale__img" src="img/sale3.jpg" alt="sale img">
             <div class="sale__text">
                 <p class="sale__p">NEW ARRIVALS</p>
                 <h3 class="sale__heading">FOR KIDS</h3>
@@ -111,14 +111,14 @@
         </div>
     </div>
     <div class="sale__item sale__item--big">
-        <img src="img/salebig.jpg" alt="sale img">
+        <img class="sale__img__big" src="img/salebig.jpg" alt="sale img">
         <div class="sale__text">
             <p class="sale__p">LUXIROUS & TRENDY</p>
             <h3 class="sale__heading">ACCESORIES</h3>
         </div>
     </div>
-</div>
-<div class="product-box center">
+</section>
+<section class="product-box center">
     <h3 class="heading tac">Featured Items</h3>
     <p class="text text-mt-6 tac">Shop for items based on what we featured in this week</p>
     <div class="product-content">
@@ -204,8 +204,8 @@
     <div class="browse-button">
         <p><a href="#"><span class="browse-button__span">Browse All Product</span></a></p>
     </div>
-</div>
-<div class="advantages__container center">
+</section>
+<section class="advantages__container center">
     <div class="advantages__item">
         <img src="img/advantage1.svg" alt="advantage img">
         <p class="advantage__title">Free Delivery</p>
@@ -221,8 +221,8 @@
         <p class="advantage__title">Quality assurance</p>
         <p class="advantage__desc">Worldwide delivery on all. Authorit tively morph next-generation innovation with extensive models.</p>
     </div>
-</div>
-<div class="subscribe__container">
+</section>
+<section class="subscribe__container">
     <div class="testimonial">
         <img src="img/testimonial1.png" alt="testimonial img">
         <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span>a pulvinar purus condimentum</span>“</p>
@@ -237,8 +237,8 @@
             <input class="form__button" type="submit" value="Subscribe">
         </form>
     </div>
-</div>
-<div class="footer">
+</section>
+<section class="footer">
     <p class="copyright">© 2021  Brand  All Rights Reserved.</p>
     <div class="social">
         <a href="#" class="social__icon">
@@ -283,6 +283,6 @@
             </svg>
         </a>
     </div>
-</div>
+</section>
 </body>
 </html>
