--- a/cart.html
+++ b/cart.html
@@ -121,7 +121,7 @@
         </div>
     </div>
     <div class="shopping-cart-column--right">
-        <div class="shipping-form">
+        <form class="shipping-form">
             <p class="shipping-form__title">SHIPPING ADDRESS</p>
             <label>
                 <input class="shipping-form__input" type="text" placeholder="Country">
@@ -133,7 +133,7 @@
                 <input class="shipping-form__input" type="text" placeholder="Postcode / Zip">
             </label>
             <input class="shipping-form__button" type="submit" value="GET A QUOTE">
-        </div>
+        </form>
         <div class="subtotal-box">
             <div class="subtotal">
                 <p class="subtotal__text">SUB TOTAL</p>
