product.html adaptive

--- a/product.html
+++ b/product.html
@@ -125,16 +125,12 @@
             </div>
             <div class="blank-box"></div>
             <div class="about-product">
-                <span class="about-product__collection">WOMEN COLLECTION</span>
-                <svg class="divider--red" xmlns="http://www.w3.org/2000/svg" width="63" height="4" viewBox="0 0 63 4" fill="none">
-                    <path d="M63 0.786865H0V3.81225H63V0.786865Z" fill="#EF5B70"/>
-                </svg>
-                <span class="about-product__product">MOSCHINO CHEAP AND CHIC</span>
-                <span class="about-product__description">Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional portals. </span>
-                <span class="about-product__price">$561</span>
-                <svg class="divider--gray" xmlns="http://www.w3.org/2000/svg" width="642" height="2" viewBox="0 0 642 2" fill="none">
-                    <path d="M0.5 1.49829H641.5H0.5Z" stroke="#EAEAEA" stroke-linejoin="round"/>
-                </svg>
+                <div class="about-product__collection">WOMEN COLLECTION</div>
+                <hr class="divider--red">
+                <div class="about-product__product">MOSCHINO CHEAP AND CHIC</div>
+                <div><p class="about-product__description">Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional portals.</p></div>
+                <div class="about-product__price">$561</div>
+                <hr class="divider--gray">
                 <div class="filter-sort padding-top">
                     <div class="sort">
                         <details class="sort__details">
