--- a/catalog.html
+++ b/catalog.html
@@ -383,7 +383,7 @@
                 </form>
             </div>
         </div>
-        <div class="footer">
+        <div class="footer center">
             <p class="copyright">© 2021 Brand All Rights Reserved.</p>
             <div class="social">
                 <a href="#" class="social__icon">
