--- a/registration.html
+++ b/registration.html
@@ -197,7 +197,7 @@
                 </form>
             </div>
         </section>
-        <section class="footer">
+        <section class="footer center">
             <p class="copyright">© 2021  Brand  All Rights Reserved.</p>
             <div class="social">
                 <a href="#" class="social__icon">
